Prevent 'A-Z' from wrapping onto two lines

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -536,6 +536,7 @@ body {
   margin: 0;
   padding: 0.5em 0;
   text-decoration: none;
+  white-space: nowrap;
 }
 
 .lhb-tab--search {
